# subgraph_matching

./: .gitignore  LICENSE  README.md
Galois-master/: CMakeLists.txt
Galois-master/inputs/: prepare.py
Galois-master/inputs/USpowergrid_n4941/: USpowergrid_n4941.gr  USpowergrid_n4941.py  USpowergrid_n4941.txt
Galois-master/inputs/citeseer/: citeseer.gr  citeseer.py  citeseer.txt
Galois-master/inputs/com-dblp/: com-dblp.py
Galois-master/inputs/com-youtube/: com-youtube.py
Galois-master/inputs/complete/: complete_5.gr  complete_6.gr  complete_7.gr
Galois-master/inputs/facebook_combined/: facebook_combined.gr  facebook_combined.py
Galois-master/inputs/soc-Epinions1/: soc-Epinions1.py
Galois-master/inputs/test/: test.txt  test2.txt
Galois-master/libgalois/include/galois/graphs/: LC_Adaptor_Graph.h
Galois-master/lonestar/analytics/cpu/: CMakeLists.txt
Galois-master/lonestar/analytics/cpu/subgraph_matching/: CMakeLists.txt  configuration.h  disjoint_set_union.h  pattern.h  prefix.h  schedule.h  subgraph_matching.cpp  subgraph_matching.h  utils.h  vertex_set.h
Galois-master/lonestar/analytics/cpu/subgraph_matching_copy/: CMakeLists.txt  classes.h  dataloader.cpp  dataloader.h  disjoint_set_union.h  graph.cpp  graph.h  pattern.h  prefix.h  schedule.cpp  schedule.h  subgraph_matching.cpp  (+3 more)
Galois-master/lonestar/analytics/distributed/: CMakeLists.txt
Galois-master_test/: dev-env.yml
Galois-master_test/inputs/: prepare.py
Galois-master_test/inputs/test/: test.gr  test2.gr
Galois-master_test/inputs/wiki-vote/: wiki-vote.gr  wiki-vote.txt
(+24 files in other folders)
